# OCaml-Recipe-Generator

./: .txt  Arr.txt  Chicken Handi.txt  Nanaimo_Bars.txt  Nutty_Chicken_Curry.txt  Readme.md  Spanish_Tortilla.txt  Spicy_Arrabiata_Penne.txt  adf.txt  bisect002611261.coverage  bisect009456930.coverage  bisect010552644.coverage  bisect011256766.coverage  bisect024113214.coverage  bisect037560117.coverage  bisect064927290.coverage  bisect118339217.coverage  bisect126932630.coverage  bisect158803825.coverage  bisect165116329.coverage  bisect189159272.coverage  bisect193205847.coverage  bisect194408222.coverage  bisect213161271.coverage  bisect216450488.coverage  bisect250595969.coverage  bisect261808945.coverage  bisect263531478.coverage  bisect274813541.coverage  bisect275739126.coverage  bisect280069090.coverage  bisect310003106.coverage  bisect319946676.coverage  bisect336676532.coverage  bisect342602935.coverage  bisect351848315.coverage  bisect352794307.coverage  bisect359401015.coverage  bisect360960581.coverage  bisect371207391.coverage  (+72 more)
_build/: .db  .digest-db  log
_build/.sandbox/e25587d6e22a9102f80caa9a9b936e93/default/src/: generator.ml
_build/default/: META.project  Readme.md  project.dune-package  project.install  project.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/455a706311ae974412851d5f5e6befec/: dune__exe___ppx.cmx
_build/default/.ppx/57ef275c515ec1fe105f6ff0979f5a61/: dune__exe___ppx.cmo
_build/default/.utop/: utop.ml-gen  utop.pp.ml-gen
_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmo  dune__exe__Utop.cmt
_build/default/src/: dune  generator.cma  generator.cmxa  generator.cmxs  generator.ml  generator.mli  generator.pp.ml  generator.pp.mli  main.ml  main.pp.ml  meal.cma  meal.cmxa  meal.cmxs  meal.ml  meal.mli  meal.pp.ml  meal.pp.mli
_build/default/src/.generator.objs/byte/: generator.cmi  generator.cmo  generator.cmt  generator.cmti
_build/default/src/.generator.objs/native/: generator.cmx
_build/default/src/.main.eobjs/byte/: dune__exe__Main.cmti
_build/default/src/.main.eobjs/native/: dune__exe__Main.cmx
_build/default/src/.meal.objs/byte/: meal.cmi  meal.cmo  meal.cmt  meal.cmti
_build/default/src/.meal.objs/native/: meal.cmx
_build/default/src/.merlin-conf/: exe-main  lib-generator  lib-meal  lib-project
_build/default/tests/: bisect027013326.coverage  bisect083630395.coverage  bisect143455319.coverage  bisect159637944.coverage  bisect188906512.coverage  bisect190160027.coverage  bisect216645356.coverage  bisect224074684.coverage  bisect240028444.coverage  bisect274777537.coverage  bisect455588483.coverage  bisect591136496.coverage  bisect625847080.coverage  bisect645920188.coverage  bisect721124499.coverage  bisect730704249.coverage  bisect896706843.coverage  bisect901234898.coverage  dune  oUnit-Assignment3 Tests.cache  tests.ml
_build/default/tests/.merlin-conf/: exe-tests
_build/default/tests/.tests.eobjs/byte/: dune__exe__Tests.cmti
_build/install/default/lib/project/: meal.cma  (+8 more)
_coverage/: index.html
_coverage/src/: generator.ml.html  meal.ml.html
src/: dune  generator.ml  generator.mli  main.ml  meal.ml  meal.mli  mocks.txt
tests/: tests.ml
(+1 files in other folders)
