(library
  (name meal)
  (public_name project)
  (modules
    meal)
  (preprocess
    (pps bisect_ppx ))
  (libraries
    cohttp-lwt-unix
    core
    core_unix.sys_unix
    core_unix
    stdio
    ounit2
    )
)


(library
  (name generator)
  (modules
    generator)
  (preprocess
    (pps bisect_ppx ))
  (libraries
    cohttp-lwt-unix
    core
    core_unix.sys_unix
    core_unix
    meal
    stdio
    str
    ounit2
    )
)

(executable
  (name main)
  (public_name project)
  (modules
    main)
  (preprocess
    (pps ppx_jane ))
  (libraries
    core
    core_unix
    core_unix.sys_unix
    core_unix.command_unix
    stdio
    generator
    ounit2
  )
)