(library
  (name meal)
  (modules
    meal)
  (preprocess
    (pps bisect_ppx ))
  (libraries
    cohttp-lwt-unix
    core
    core_unix.sys_unix
    core_unix
    stdio
    )
)


(library
  (name generator)
  (modules
    generator)
  (preprocess
    (pps bisect_ppx ))
  (libraries
    cohttp-lwt-unix
    core
    core_unix.sys_unix
    core_unix
    meal
    stdio
    str
    )
)

(executable
  (name main)
  (modules
    main)
  (preprocess
    (pps ppx_jane ))
  (libraries
    core
    core_unix
    core_unix.sys_unix
    core_unix.command_unix
    stdio
    generator
  )
)